Fix aside on mobile (Origine)

--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -582,7 +582,7 @@ a.btn {
 	background: #fff;
 }
 .aside.aside_feed {
-	padding: 10px 0 50px;
+	padding: 10px 0;
 	text-align: center;
 }
 .aside.aside_feed .tree {
@@ -1030,17 +1030,20 @@ a.btn {
 	}
 	.aside .toggle_aside,
 	#panel .close {
-		position: absolute;
 		display: block;
-		top: 0; right: 0;
-		width: 30px;
-		height: 30px;
-		line-height: 30px;
+		width: 100%;
+		height: 50px;
+		line-height: 50px;
 		text-align: center;
 		background: #f6f6f6;
-		border-left: 1px solid #ddd;
 		border-bottom: 1px solid #ddd;
-		border-radius: 0 0 0 5px;
+	}
+
+	.aside.aside_feed {
+		padding: 0;
+	}
+	.aside.aside_feed .tree {
+		position: static;
 	}
 
 	.nav_menu .btn {
